src/test/ui/E0661.rs
#![feature(asm)]

fn main() {
    let a;
    asm!("nop" : "r"(a));
    //~^ ERROR E0661
}
